--- a/www/css/style.css
+++ b/www/css/style.css
@@ -10,6 +10,101 @@ ion-content{
   background-image: url("https://www.transparenttextures.com/patterns/45-degree-fabric-dark.png");
   /* This is mostly intended for prototyping; please download the pattern and re-host for production environments. Thank you! */
 }
+.c-hamburger {
+display: block;
+position: relative;
+overflow: hidden;
+margin: 0;
+padding: 0;
+width: 85px;
+height: 75px;
+font-size: 0;
+text-indent: -9999px;
+appearance: none;
+box-shadow: none;
+border-radius: none;
+border: none;
+cursor: pointer;
+transition: background 0.3s;
+}
+
+.c-hamburger:focus {
+outline: none;
+}
+.c-hamburger span {
+display: block;
+position: absolute;
+top: 36px;
+left: 18px;
+right: 18px;
+height: 6px;
+background: white;
+}
+
+.c-hamburger span::before,
+.c-hamburger span::after {
+position: absolute;
+display: block;
+left: 0;
+width: 100%;
+height: 6px;
+background-color: #fff;
+content: "";
+}
+
+.c-hamburger span::before {
+top: -20px;
+}
+
+.c-hamburger span::after {
+bottom: -20px;
+}
+.c-hamburger--htx {
+background-color: transparent;;
+}
+
+.c-hamburger--htx span {
+transition: background 0s 0.3s;
+}
+
+.c-hamburger--htx span::before,
+.c-hamburger--htx span::after {
+transition-duration: 0.3s, 0.3s;
+transition-delay: 0.3s, 0s;
+}
+
+.c-hamburger--htx span::before {
+transition-property: top, transform;
+}
+
+.c-hamburger--htx span::after {
+transition-property: bottom, transform;
+}
+
+/* active state, i.e. menu open */
+.c-hamburger--htx.is-active {
+background-color: transparent;;
+}
+
+.c-hamburger--htx.is-active span {
+background: none;
+}
+
+.c-hamburger--htx.is-active span::before {
+top: 0;
+transform: rotate(45deg);
+}
+
+.c-hamburger--htx.is-active span::after {
+bottom: 0;
+transform: rotate(-45deg);
+}
+
+.c-hamburger--htx.is-active span::before,
+.c-hamburger--htx.is-active span::after {
+transition-delay: 0s, 0.3s;
+}
+
 .h2{
   font-size: 30px;
 }
@@ -38,7 +133,7 @@ margin-top: 69px;
 }
 .navi ul {
   list-style: none;
-  background-color:#aba;
+  background-color: #9e9e9e;;
   text-align: center;
   padding: 0;
   margin: 0;
