--- a/www/views/navBar.html
+++ b/www/views/navBar.html
@@ -1,8 +1,13 @@
 
   <div class="navi" id="navi">
 
-    <ul>
-      <li ng-click="togNav()"><a>  BOXWOD </a><img src="./img/hamburger.png"/></li>
+
+    <ul> <li>
+      <button ng-click='togNav()' class="c-hamburger c-hamburger--htx">
+        <span>toggle menu</span>
+      </button>
+      <button ng-hide="goNav" ui-sref='settings' class="button icon ion-gear-a"></button>
+</li>
       <li ng-click="togNav()" ng-hide="goNav"><a ui-sref="wod">WOD</a></li>
       <li ng-click="togNav()" ng-hide="goNav"><a ui-sref="home">Home</a></li>
       <li ng-click="togNav()" ng-hide="goNav"> <a ui-sref="user">Profile</a></li>
