--- a/www/views/wodModal.html
+++ b/www/views/wodModal.html
@@ -36,8 +36,8 @@
       </div>
       <div class="item item-body">
         <p>
-          <a href="#" class="subdued">1 like</a>
-          <a href="#" class="subdued">{{wod.comments.length}} comments</a>
+          <a href="#" class="subdued">{{wod.likes.length}} Likes</a>
+          <a href="#" class="subdued">{{wod.comments.length}} Comments</a>
         </p>
         <div ng-hide='custom' class="item item-input item-floating-label">
           <span class="input-label">add comment</span>
@@ -45,6 +45,9 @@
           <textarea ng-model="newComment" style="background-color: transparent" placeholder="add comment" type="text"></textarea>
           <button type="button" ng-click="postComment(currentUser._id, wod._id, newComment)" class="button button-stable">
             Submit
+          </button>
+          <button type="button" ng-click="postLike(currentUser._id, wod._id, newLike)" class="button button-stable">
+            Like
           </button>
 
         </div>
