Got styling working and home pictures added

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -5,19 +5,43 @@ body{
 
 }
 
-ion-content{
+.ion-content{
   background-color: #9e9e9e;
   background-image: url("https://www.transparenttextures.com/patterns/45-degree-fabric-dark.png");
   /* This is mostly intended for prototyping; please download the pattern and re-host for production environments. Thank you! */
+  background-color:  transparent;
+
 }
+.item-content{
+  background-color:  grey;
+  color: white;
+}
+.item-complex{
+  background-color:  grey;
+
+}
+.button icon ion-gear-a{
+  float: right;
+}
+.settingNav{
+  float: right;
+  margin-right: 20px;
+}
+.wodText h2, .wodText h1{
+  color: white;
+}
+.wodList .item-content{
+  background-color: grey;
+}
+
 .c-hamburger {
 display: block;
 position: relative;
 overflow: hidden;
 margin: 0;
 padding: 0;
-width: 85px;
-height: 75px;
+width: 75px;
+height: 63px;
 font-size: 0;
 text-indent: -9999px;
 appearance: none;
@@ -26,6 +50,7 @@ border-radius: none;
 border: none;
 cursor: pointer;
 transition: background 0.3s;
+float: left;
 }
 
 .c-hamburger:focus {
@@ -34,10 +59,10 @@ outline: none;
 .c-hamburger span {
 display: block;
 position: absolute;
-top: 36px;
+top: 30px;
 left: 18px;
 right: 18px;
-height: 6px;
+height: 5px;
 background: white;
 }
 
@@ -53,14 +78,14 @@ content: "";
 }
 
 .c-hamburger span::before {
-top: -20px;
+top: -15px;
 }
 
 .c-hamburger span::after {
-bottom: -20px;
+bottom: -15px;
 }
 .c-hamburger--htx {
-background-color: transparent;;
+background-color: transparent;
 }
 
 .c-hamburger--htx span {
@@ -133,10 +158,11 @@ margin-top: 69px;
 }
 .navi ul {
   list-style: none;
-  background-color: #9e9e9e;;
+  background-color: rgba(90, 95, 107, 0.9);
   text-align: center;
   padding: 0;
   margin: 0;
+
 
 }
 .navi li {
@@ -171,6 +197,8 @@ margin-top: 69px;
   color: #444;
   cursor: default;
 }
+
+/* MEDIA QUERY */
 
 @media screen and (min-width: 600px) {
   .navi li {
