--- a/www/views/homeTmpl.html
+++ b/www/views/homeTmpl.html
@@ -4,9 +4,7 @@
 </section>
 
   <ion-content  ng-model='admin' class="space">
-  <h2 class="title">Home</h2>
-
-
+  <!-- <h2 class="title">Home</h2> -->
   <label class="item item-input">
   <i class="icon ion-search placeholder-icon"></i>
   <input type="search" placeholder="search user" ng-model="search">
@@ -35,9 +33,49 @@
 </ion-item>
 <div class="" ng-show="filtered_result.length == 0">
 No results found
-
 </div>
 </ion-list>
+
+<div class="list card">
+<div class="item item-image">
+<img src="./img/rouge.jpg" alt="" />
+<a class="item item-icon-left assertive" href="#">
+    <i class="icon ion-android-add"></i>
+  </a>
+</div>
+
+</div>
+<div class="list card">
+<div class="item item-image">
+<img src="./img/gamescover.jpg" alt="" />
+</div>
+<a class="item item-icon-left assertive" href="#">
+    <i class="icon ion-android-add"></i>
+
+  </a>
+</div>
+
+<div class="list card">
+<div class="item item-image">
+<img src="./img/saracover.jpg" alt="" />
+</div>
+<a class="item item-icon-left assertive" href="#">
+    <i class="icon ion-android-add"></i>
+
+  </a>
+</div>
+
+<div class="list card">
+<div class="item item-image">
+<img src="./img/monkeycover.png" alt="" />
+</div>
+<a class="item item-icon-left assertive" href="#">
+    <i class="icon ion-android-add"></i>
+
+  </a>
+</div>
+
+
 </ion-content>
 
 
