--- a/www/views/homeTmpl.html
+++ b/www/views/homeTmpl.html
@@ -39,19 +39,21 @@ No results found
 <div class="list card">
 <div class="item item-image">
 <img src="./img/rouge.jpg" alt="" />
-<a class="item item-icon-left assertive" href="#">
-    <i class="icon ion-android-add"></i>
-  </a>
 </div>
+<a class="item item-icon-left assertive" href="http://www.rougefitness.com">
+    <i class="icon ion-android-add"></i>
+More
+  </a>
+
 
 </div>
 <div class="list card">
 <div class="item item-image">
 <img src="./img/gamescover.jpg" alt="" />
 </div>
-<a class="item item-icon-left assertive" href="#">
+<a class="item item-icon-left assertive" href="http://www.crossfitgames.com">
     <i class="icon ion-android-add"></i>
-
+More
   </a>
 </div>
 
@@ -59,9 +61,9 @@ No results found
 <div class="item item-image">
 <img src="./img/saracover.jpg" alt="" />
 </div>
-<a class="item item-icon-left assertive" href="#">
+<a class="item item-icon-left assertive" href="https://www.boxrox.com/interview-ragnheidur-sara-sigmundsdottir/">
     <i class="icon ion-android-add"></i>
-
+More
   </a>
 </div>
 
@@ -69,11 +71,18 @@ No results found
 <div class="item item-image">
 <img src="./img/monkeycover.png" alt="" />
 </div>
-<a class="item item-icon-left assertive" href="#">
+<a class="item item-icon-left assertive" href="https://games.crossfit.com/cf/login">
     <i class="icon ion-android-add"></i>
-
+More
   </a>
 </div>
+<div class="">
+
+    <a class="item item-icon-right positive" href="mailto:wodbox@gmail.com?Subject=Hello%20There" target="_top">
+        <i class="icon ion-android-mail"></i>
+      </a>
+</div>
+
 
 
 </ion-content>
