--- a/www/css/style.css
+++ b/www/css/style.css
@@ -22,6 +22,13 @@ body{
 }
 .button icon ion-gear-a{
   float: right;
+  min-width: 30px;
+  min-height: 30px;
+}
+.closeComment{
+  min-width: 30px;
+  min-height: 30px;
+  background-color: transparent;
 }
 .settingNav{
   float: right;
@@ -62,8 +69,9 @@ position: absolute;
 top: 30px;
 left: 18px;
 right: 18px;
-height: 5px;
+height: 4px;
 background: white;
+border-radius: 5px;
 }
 
 .c-hamburger span::before,
@@ -72,17 +80,19 @@ position: absolute;
 display: block;
 left: 0;
 width: 100%;
-height: 6px;
+height: 4px;
 background-color: #fff;
 content: "";
+border-radius: 5px;
+
 }
 
 .c-hamburger span::before {
-top: -15px;
+top: -13px;
 }
 
 .c-hamburger span::after {
-bottom: -15px;
+bottom: -13px;
 }
 .c-hamburger--htx {
 background-color: transparent;
@@ -129,6 +139,9 @@ transform: rotate(-45deg);
 .c-hamburger--htx.is-active span::after {
 transition-delay: 0s, 0.3s;
 }
+.settingsMove{
+  margin-left: 40px;
+}
 
 .h2{
   font-size: 30px;
@@ -141,6 +154,40 @@ margin-top: 69px;
     margin-bottom: 46px;
 }
 
+.float-left{
+  margin-right: 50px;
+}
+.user-top{
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-end;;
+  justify-content: space-around;
+  width: 300px;
+  height: 150px;
+  margin-left: 60px;
+}
+.show-name{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 300px;
+  height: 70px;
+  margin-left: 60px;
+}
+.user-pic{
+  height: 100px;
+  width: 100px;
+  border-radius: 50px;
+}
+.button{
+color: white;
+background-color: transparent;
+}
+#my-button{
+  height: 60px;
+  width: 60px;
+  margin-bottom: 20px;
+}
 #navi {
   position: fixed;
   top: 0;
@@ -149,7 +196,7 @@ margin-top: 69px;
   z-index: 999;
 }
 .navi img{
-  height: 61px;
+  height: 65px;
   width: 74px;
   background-color: transparent;
   float: right;
@@ -158,10 +205,12 @@ margin-top: 69px;
 }
 .navi ul {
   list-style: none;
-  background-color: rgba(90, 95, 107, 0.9);
+  background-color: rgba(90, 95, 107, 0.95);
   text-align: center;
   padding: 0;
   margin: 0;
+  transition-delay: 0s, 0.3s;
+
 
 
 }
@@ -172,7 +221,7 @@ margin-top: 69px;
   font-family: 'Oswald', sans-serif;
   font-size: 2.1em;
   line-height: 40px;
-  height: 70px;
+  height: 69px;
   border-bottom: 1px solid #888;
 }
 
