--- a/www/views/userTmpl.html
+++ b/www/views/userTmpl.html
@@ -8,11 +8,21 @@
     <button ui-sref='settings' id='my-button' class="button icon ion-android-mail"></button>
 
   </div>
-  <div class="show-name">
+  <div class="show-name white-text">
     <h3>{{currentUser.name}}</h3>
     @{{currentUser.username}}
   </div>
-
+<div class="pr-box">
+<div class="pr-show white-text">
+  <h3>Stuff</h3>
+</div>
+<div class="pr-show white-text">
+  <h3>Things</h3>
+</div>
+<div class="pr-show white-text">
+  <h3>Junk</h3>
+</div>
+</div>
 
 <div class="list">
   <label class="item item-input">
