--- a/www/views/navBar.html
+++ b/www/views/navBar.html
@@ -5,22 +5,24 @@
     <ul>
 
 
-<div class="">
-  <li >
-    <div class="">
+<div class="wodText">
+  <li class="top-boxwod">
+    <div >
       <button ng-click='togNav()' class="button icon c-hamburger c-hamburger--htx float-left">
         <span>toggle menu</span>
       </button>
     </div>
+    <div>
+          <h1>BoxWod</h1>
+    </div>
 
-    BoxWod
 
   <span ng-hide="goNav" ui-sref='settings' class="button icon ion-gear-a settingsMove"></span>
 
 </li>
-  <li ng-click="togNav()" ng-hide="goNav"><a ui-sref="wod">WOD</a></li>
-  <li ng-click="togNav()" ng-hide="goNav"><a ui-sref="home">Home</a></li>
-  <li ng-click="togNav()" ng-hide="goNav"> <a ui-sref="user">Profile</a></li>
+  <li ng-click="togNav()" ng-hide="goNav"><a ui-sref="wod"><h1>WOD</h1></a></li>
+  <li ng-click="togNav()" ng-hide="goNav"><a ui-sref="home"><h1>Home</h1></a></li>
+  <li ng-click="togNav()" ng-hide="goNav"> <a ui-sref="user"><h1>Profile</h1></a></li>
 
 </div>
     </ul>
