--- a/www/views/wodTmpl.html
+++ b/www/views/wodTmpl.html
@@ -13,8 +13,8 @@
     <ion-item ng-model="admin" ng-click="editWod(wod._id); openModal(wod)" ng-repeat="wod in allWods | orderBy:'-date'" class="item-thumbnail-left wodList">
       <!-- <img ng-src="{{item.img}}"> -->
       <div class="wodText">
-        <h2 class="title h2">{{wod.date | date: 'EEEE'}} - {{wod.date | date: 'MMM/ d/ y'}}</h2>
-        <h1 class="title">{{wod.name}}</h1>
+        <h3 >{{wod.date | date: 'EEEE'}} - {{wod.date | date: 'MMM/ d/ y'}}</h3>
+        <h1 >{{wod.name}}</h1>
       </div>
 
       <ion-option-button class="button-positive" ng-model="admin " ng-click="removeWod(wod._id); removeAlert(wod.name)">
