--- a/www/views/homeTmpl.html
+++ b/www/views/homeTmpl.html
@@ -18,8 +18,7 @@
 <img src="./img/lindsay.png">
 <h1 class="title">{{user.username}}</h1>
 
-  <h2 >{{user.admin}}</h2>
-{{user}}
+  <h2 >{{user.prs[0].backsquat}}lb Backsquat</h2>
 
 
 <section ng-if"admin">
