--- a/www/views/addWod.html
+++ b/www/views/addWod.html
@@ -15,19 +15,19 @@
   </label>
   <label class="item item-input item-floating-label">
     <span style="color: red" class="input-label">Wod Description</span>
-    <textarea ng-model="wod.description" rows='4' cols='50' style="background-color: transparent" type="text" placeholder="Description*"></textarea>
+    <textarea ng-model="wod.description" rows='4' cols='50' style="background-color: transparent" type="text" placeholder=<span>"Description*"</span>></textarea>
   </label>
   <label class="item item-input item-floating-label">
     <span class="input-label">RX</span>
     <textarea ng-model="wod.rx" rows='4' cols='50' style="background-color: transparent" type="text" placeholder="RX"></textarea>
   </label>
   <label class="item item-input item-floating-label">
-    <span class="input-label">RX</span>
+    <span class="input-label">Warm-Up</span>
     <textarea ng-model="wod.warmup" rows='4' cols='50' style="background-color: transparent" type="text" placeholder="Warm Up"></textarea>
   </label>
   <label class="item item-input item-floating-label">
     <span class="input-label">Tips</span>
-    <textarea ng-model="wod.tips" rows='4' cols='50' style="background-color: transparent" type="text" placeholder="Comments"></textarea>
+    <textarea ng-model="wod.tips" rows='4' cols='50' style="background-color: transparent" type="text" placeholder="Tips"></textarea>
   </label>
 </div>
 <footer class="footer">
